<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:id="@+id/title_card"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_gravity="center"
        card_view:cardBackgroundColor="@color/titleGreen"
        card_view:cardElevation="5dp"
        android:layout_marginBottom="@dimen/icontopmargin">

        <TextView
            android:id="@+id/about"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/about_us"
            android:textSize="30dp"
            android:layout_marginVertical="@dimen/icontopmargin"
            android:gravity="center"/>

    </androidx.cardview.widget.CardView>


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginVertical="@dimen/icontopmargin"
        app:srcCompat="@drawable/stomach" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:gravity="center"
        android:textSize="30dp"
        android:textStyle="bold"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/stomach_consultant"
        android:gravity="center"
        android:textSize="15dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_description"
        android:layout_marginVertical="40dp"
        android:gravity="center"
        style="@style/TextAppearance.AppCompat"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/version"
        android:gravity="center"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/rocky_road_title"
        android:layout_marginVertical="@dimen/icontopmargin"
        android:gravity="center"
        android:textStyle="bold"/>



</LinearLayout>