<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/menubackground"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="70dp"
            android:text="@string/app_name"
            android:textSize="20dp"
            android:textStyle="bold"
            android:textColor="@color/titleWhite"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:id="@+id/konsultasi_card"
            android:layout_width="380dp"
            android:layout_height="120dp"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            card_view:cardBackgroundColor="@color/cardview_light_background"
            card_view:cardCornerRadius="2dp"
            card_view:cardElevation="10dp">


            <LinearLayout
                android:id="@+id/konsultasi"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:onClick="launchKonsultasi"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/konsultasi_icon"
                    android:layout_width="70dp"
                    android:layout_height="80dp"
                    android:layout_gravity="center"
                    card_view:srcCompat="@drawable/chatbot" />

                <TextView
                    android:id="@+id/konsultasi_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-medium"
                    android:gravity="center"
                    android:text="@string/konsultasi_text"
                    android:textSize="20dp" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/chatbot_card"
            android:layout_width="380dp"
            android:layout_height="120dp"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            app:cardBackgroundColor="@color/cardview_light_background"
            app:cardCornerRadius="2dp"
            app:cardElevation="10dp">


            <LinearLayout
                android:id="@+id/chatbot"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:onClick="launchChatbot"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/chatbot_icon"
                    android:layout_width="70dp"
                    android:layout_height="80dp"
                    android:layout_gravity="center"
                    card_view:srcCompat="@drawable/chatbotx" />

                <TextView
                    android:id="@+id/chatbot_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-medium"
                    android:gravity="center"
                    android:text="@string/chatbot"
                    android:textSize="20dp" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                app:cardElevation="5dp">

                <LinearLayout
                    android:id="@+id/health_record"
                    android:layout_width="130dp"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/health_record_icon"
                        android:layout_width="@dimen/iconwidth"
                        android:layout_height="@dimen/iconheight"
                        android:layout_gravity="center"
                        android:layout_marginTop="@dimen/icontopmargin"
                        card_view:srcCompat="@drawable/record" />

                    <TextView
                        android:id="@+id/health_record_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:gravity="center"
                        android:text="@string/health_record"
                        android:textSize="15sp" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                app:cardElevation="5dp">

                <LinearLayout
                    android:id="@+id/biodata"
                    android:layout_width="130dp"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:onClick="launchBiodata"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/biodata_icon"
                        android:layout_width="@dimen/iconwidth"
                        android:layout_height="@dimen/iconheight"
                        android:layout_gravity="center"
                        android:layout_marginTop="@dimen/icontopmargin"
                        card_view:srcCompat="@drawable/biodata" />

                    <TextView
                        android:id="@+id/biodata_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/biodata"
                        android:textSize="@dimen/menutext" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                app:cardElevation="5dp">

                <LinearLayout
                    android:id="@+id/artikel"
                    android:layout_width="130dp"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:onClick="launchArtikel"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/artikel_icon"
                        android:layout_width="@dimen/iconwidth"
                        android:layout_height="@dimen/iconheight"
                        android:layout_gravity="center"
                        android:layout_marginTop="@dimen/icontopmargin"
                        card_view:srcCompat="@drawable/artikel" />

                    <TextView
                        android:id="@+id/artikel_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/artikel"
                        android:textSize="@dimen/menutext" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>

    </LinearLayout>

    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:orientation="horizontal">

            <androidx.cardview.widget.CardView
                android:id="@+id/artikel1"
                android:layout_width="380dp"
                android:layout_height="match_parent"
                android:elevation="5dp"
                android:layout_marginHorizontal="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:onClick="webArtikel1"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="150dp"
                        android:layout_height="100dp"
                        android:layout_margin="10dp"
                        android:layout_weight="1"
                        android:onClick="webArtikel1"
                        android:scaleType="centerCrop"
                        card_view:srcCompat="@drawable/stomachartikelk" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="vertical">

                        <TextView
                            style="@style/TextAppearance.AppCompat.Headline"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="5dp"
                            android:text="@string/stomachartikel1"
                            android:textSize="20dp" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="5dp"
                            android:text="@string/artikel1" />
                    </LinearLayout>
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/artikel2"
                android:layout_width="380dp"
                android:elevation="5dp"
                android:layout_marginHorizontal="5dp"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:onClick="webArtikel2"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="150dp"
                        android:layout_height="100dp"
                        android:layout_margin="10dp"
                        android:layout_weight="1"
                        android:onClick="webArtikel2"
                        android:scaleType="centerCrop"
                        card_view:srcCompat="@drawable/stomachartikel2" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="vertical">

                        <TextView
                            style="@style/TextAppearance.AppCompat.Headline"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="5dp"
                            android:text="@string/stomachartikel2"
                            android:textSize="20dp" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="5dp"
                            android:text="@string/artikel2" />
                    </LinearLayout>
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/artikel3"
                android:layout_width="380dp"
                android:elevation="5dp"
                android:layout_marginHorizontal="5dp"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:onClick="webArtikel3"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="150dp"
                        android:layout_height="100dp"
                        android:layout_margin="10dp"
                        android:layout_weight="1"
                        android:onClick="webArtikel3"
                        android:scaleType="centerCrop"
                        card_view:srcCompat="@drawable/stomachartikel2" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="vertical">

                        <TextView
                            style="@style/TextAppearance.AppCompat.Headline"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="5dp"
                            android:text="@string/stomachartikel3"
                            android:textSize="20dp" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="5dp"
                            android:text="@string/artikel3" />
                    </LinearLayout>
                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </HorizontalScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"></LinearLayout>

</LinearLayout>